Localized pages set 4

--- a/learn-certs-pr/azure-developer.yml
+++ b/learn-certs-pr/azure-developer.yml
@@ -2,20 +2,20 @@
 title: 'Microsoft-zertifiziert: Azure Developer Associate.'
 metadata:
   title: 'Microsoft-zertifiziert: Azure Developer Associate.'
-  description: 'Microsoft Azure Developers entwickeln, erstellen, testen und warten Cloud-Lösungen, beispielsweise Anwendungen und Services in Zusammenarbeit mit Cloud-Lösungsarchitekten, Cloud-DBAs, Cloud-Administratoren und Clients, und implementieren diese Lösungen.'
+  description: 'Microsoft Azure Developers entwickeln, erstellen, testen und warten Cloud-LÃ¶sungen, beispielsweise Anwendungen und Services in Zusammenarbeit mit Cloud-LÃ¶sungsarchitekten, Cloud-DBAs, Cloud-Administratoren und Clients, und implementieren diese LÃ¶sungen.'
 uid: certification.azure-developer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Microsoft Azure Developers entwickeln erstellen, testen und warten Cloud-Lösungen, wie beispielsweise Anwendungen und Services, in Zusammenarbeit mit Cloud-Lösungsarchitekten, Cloud-DBAs, Cloud-Administratoren und Clients, um diese Lösungen zu implementieren.
-subTitle: Microsoft Azure Developers entwickeln erstellen, testen und warten Cloud-Lösungen, wie beispielsweise Anwendungen und Services, in Zusammenarbeit mit Cloud-Lösungsarchitekten, Cloud-DBAs, Cloud-Administratoren und Clients, um diese Lösungen zu implementieren.
+  Microsoft Azure Developers entwickeln erstellen, testen und warten Cloud-LÃ¶sungen, wie beispielsweise Anwendungen und Services, in Zusammenarbeit mit Cloud-LÃ¶sungsarchitekten, Cloud-DBAs, Cloud-Administratoren und Clients, um diese LÃ¶sungen zu implementieren.
+subTitle: Microsoft Azure Developers entwickeln erstellen, testen und warten Cloud-LÃ¶sungen, wie beispielsweise Anwendungen und Services, in Zusammenarbeit mit Cloud-LÃ¶sungsarchitekten, Cloud-DBAs, Cloud-Administratoren und Clients, um diese LÃ¶sungen zu implementieren.
 levels:
 - intermediate
 skills:
-- Entwickeln von Azure Infrastructure-als-Service-Lösungen
-- Entwickeln der Azure-Plattform-als-Service-Lösung
-- Entwickeln für Azure Storage
+- Entwickeln von Azure Infrastructure-als-Service-LÃ¶sungen
+- Entwickeln der Azure-Plattform-als-Service-LÃ¶sung
+- Entwickeln fÃ¼r Azure Storage
 - Implementieren der Azure-Sicherheit
-- Überwachen, Fehlerbehebung und Optimierung von Lösungen
+- Ãœberwachen, Fehlerbehebung und Optimierung von LÃ¶sungen
 - Verbindung zu Azure- und Drittanbieter-Diensten herstellen und nutzen
 roles:
 - developer
@@ -31,6 +31,7 @@ products:
 - azure-bot-service
 - azure-functions
 - azure-logic-apps
+
 courses:
 - uid: course.az-203t01
 - uid: course.az-203t02
@@ -59,17 +60,17 @@ resources:
   description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft zertifizierter: Azure-Developer-Associate zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQqM
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich Ã¼ber die Zertifizierungen in einem Ã¼bersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen und die  aufgabenbasierten und fachlichen Zertifizierungen.
+  description: Verschaffen Sie sich einen Ãœberblick Ã¼ber die Grundlagen und die  aufgabenbasierten und fachlichen Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prüfung wiederholen
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: PrÃ¼fung wiederholen
+  description: Sehen Sie sich zwei groÃŸartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhÃ¶hen.
   href: deals.md
-- title: Unterstützung fur Zertifizierung
+- title: UnterstÃ¼tzung fur Zertifizierung
   description: Erhalten Sie Hilfe in Microsoft Support-Foren. Werktags (Montag-Freitag) wird Ihnen ein Forenmoderator antworten.
   href: help.md
 - title: Dashboard zur Zertifizierung
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  description: ÃœberprÃ¼fen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/de-de/learning/dashboard.aspx
