--- a/learn-certs-pr/exams/ai-100.yml
+++ b/learn-certs-pr/exams/ai-100.yml
@@ -19,7 +19,7 @@ summary: |-
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Analyse der Lösungsanforderungen, Entwurf von Lösungen, Integration von AI-Modellen in Lösungen sowie Bereitstellung und Verwaltung von Lösungen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC6C
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AI-100&examname=Exam%20AI-100:%20Designing%20and%20Implementing%20an%20Azure%20AI%20Solution&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fde-de%2Flearn%2Fcertifications%2Fexams%2Fai-100
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AI-100&examname=Prüfung%20AI-100:%20Entwurf%20und%20Implementieren%20einer%20Azure%20AI%20Lösung&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fde-de%2Flearn%2Fcertifications%2Fexams%2Fai-100
 locales:
 - en
 - ja
