--- a/learn-certs-pr/exams/az-300.yml
+++ b/learn-certs-pr/exams/az-300.yml
@@ -1,19 +1,19 @@
 ### YamlMime:Examination
 title: Microsoft Azure Architect Technologies
 metadata:
-  title: 'Prüfung AZ-300: Microsoft Azure Architect Technologies'
-  description: 'Prüfung AZ-300: Microsoft Azure Architect Technologies'
-uid: exam.ai-300
+  title: 'PrÃ¼fung AZ-300: Microsoft Azure Architect Technologies'
+  description: 'PrÃ¼fung AZ-300: Microsoft Azure Architect Technologies'
+uid: exam.az-300
 displayName: AZ-300
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am Mittwoch, den 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/></div>
+  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser PrÃ¼fung wurde am Mittwoch, den 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument Skills measured herunter, um zu sehen, was sich geÃ¤ndert hat.<br/><br/></div>
 
-  Kandidaten für diese Prüfung sind Azure Solution Architects, die Interessenvertreter beraten und Geschäftsanforderungen in sichere, skalierbare und zuverlässige Lösungen umsetzen. Die Kandidaten sollten über umfangreiche Erfahrungen und Kenntnisse in verschiedenen Aspekten des IT-Betriebs verfügen, einschließlich Netzwerk, Virtualisierung, Identität, Sicherheit, Business Continuity, Disaster Recovery, Datenmanagement, Budgetierung und Governance. Diese Position erfordert die Verwaltung der Auswirkungen von Entscheidungen in den einzelnen Bereichen auf eine Gesamtlösung. Die Kandidaten müssen über gute Kenntnisse in den Bereichen Azure-Administration, Azure-Entwicklung und DevOps verfügen und über Kenntnisse auf Expertenebene in mindestens einem dieser Bereiche verfügen.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Bereitstellen und Konfigurieren der Infrastruktur, Implementieren von Workloads und Sicherheit, Erstellen und Bereitstellen von Anwendungen, Implementieren von Authentifizierungen und sicheren Daten, und Entwickeln für die Cloud- und Azure-Speicher.'
+  Kandidaten fÃ¼r diese PrÃ¼fung sind Azure Solution Architects, die Interessenvertreter beraten und GeschÃ¤ftsanforderungen in sichere, skalierbare und zuverlÃ¤ssige LÃ¶sungen umsetzen. Die Kandidaten sollten Ã¼ber umfangreiche Erfahrungen und Kenntnisse in verschiedenen Aspekten des IT-Betriebs verfÃ¼gen, einschlieÃŸlich Netzwerk, Virtualisierung, IdentitÃ¤t, Sicherheit, Business Continuity, Disaster Recovery, Datenmanagement, Budgetierung und Governance. Diese Position erfordert die Verwaltung der Auswirkungen von Entscheidungen in den einzelnen Bereichen auf eine GesamtlÃ¶sung. Die Kandidaten mÃ¼ssen Ã¼ber gute Kenntnisse in den Bereichen Azure-Administration, Azure-Entwicklung und DevOps verfÃ¼gen und Ã¼ber Kenntnisse auf Expertenebene in mindestens einem dieser Bereiche verfÃ¼gen.
+subTitle: 'Diese PrÃ¼fung misst Ihre FÃ¤higkeit, folgende technische Aufgaben zu erfÃ¼llen: Bereitstellen und Konfigurieren der Infrastruktur, Implementieren von Workloads und Sicherheit, Erstellen und Bereitstellen von Anwendungen, Implementieren von Authentifizierungen und sicheren Daten, und Entwickeln fÃ¼r die Cloud- und Azure-Speicher.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VzwB
-practiceTestUrl: https://us.mindhub.com/p/MU-AZ-300?utm_source=microsoft&amp;utm_medium=certpage&amp;utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-300&examname=Exam%20AZ-300:%20Microsoft%20Azure%20Architect%20Technologies&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fde-de%2Flearn%2Fcertifications%2Fexams%2Faz-300
+practiceTestUrl: https://us.mindhub.com/p/MU-AZ-300?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-300&examname=PrÃ¼fung%20AZ-300:%20Microsoft%20Azure%20Architect%20Technologies&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fde-de%2Flearn%2Fcertifications%2Fexams%2Faz-300
 locales:
 - en
 - ja
@@ -22,12 +22,12 @@ locales:
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wurde am Mittwoch, den 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser PrÃ¼fung wurde am Mittwoch, den 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument Skills measured herunter, um zu sehen, was sich geÃ¤ndert hat.
 - Bereitstellen und Konfigurieren der Infrastruktur (25-30%)
 - Implementieren von Workloads und Sicherheit (20-25%)
 - Erstellen und Bereitstellen von Apps (5-10%)
 - Authentifizierung und Datensicherheit implementieren (5-10%)
-- Entwickleln für die Cloud und für Azur-Speicher (20-25%)
+- Entwickleln fÃ¼r die Cloud und fÃ¼r Azur-Speicher (20-25%)
 roles:
 - solution-architect
 products:
@@ -79,20 +79,20 @@ resources:
   description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft zertifizierter Azure Solutions Architect Experte zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtVsd
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich Ã¼ber die Zertifizierungen in einem Ã¼bersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfung wiederholen
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: PrÃ¼fung wiederholen
+  description: Sehen Sie sich zwei groÃŸartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhÃ¶hen.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: UnterstÃ¼tzung bei ZertifizierungsprÃ¼fungen
   description: Erhalten Sie Hilfe in Microsoft Support-Foren. Werktags (Montag bis Freitag) wird Ihnen ein Forenmoderator antworten.
   href: ../help.md
 - title: Dashboard zur Zertifizierung
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  description: ÃœberprÃ¼fen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/de-de/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: UnterkÃ¼nfte anfordern
+  description: Erfahren Sie mehr Ã¼ber die Anforderung einer Unterkunft fÃ¼r Ihre PrÃ¼fung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+- title: PrÃ¼fungsrichtlinien und FAQs
+  description: Lesen Sie die PrÃ¼fungsrichtlinien und die hÃ¤ufig gestellten Fragen.
   href: ../certification-exam-policies.md
