--- a/learn-certs-pr/exams/md-101.yml
+++ b/learn-certs-pr/exams/md-101.yml
@@ -1,35 +1,35 @@
 ### YamlMime:Examination
 title: Management von Modern Desktops
 metadata:
-  title: 'Prüfung MD-101: Management von Modern Desktops'
-  description: 'Prüfung MD-101: Management von Modern Desktops'
+  title: 'PrÃ¼fung MD-101: Management von Modern Desktops'
+  description: 'PrÃ¼fung MD-101: Management von Modern Desktops'
 uid: exam.md-101
 displayName: MD-101
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am Freitag, den 22. November 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/></div>
+  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser PrÃ¼fung wurde am Freitag, den 22. November 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument Skills measured herunter, um zu sehen, was sich geÃ¤ndert hat.<br/></div>
   <br/>
   
-  Wenn Sie die Prüfung [Exam 70-698](https://www.microsoft.com/de-de/learning/exam-70-698.aspx) bestanden haben, bevor sie am 31. März 2019 abgelaufen ist, brauchen Sie nur noch MD-101 zu absolvieren, um die Modern Desktop Zertifizierung zu erhalten. Kandidaten für diese Prüfung sind Administratoren, die Geräte und Client-Anwendungen in einer Unternehmensumgebung bereitstellen, konfigurieren, sichern, verwalten und überwachen. Die Kandidaten verwalten Identitäten, Zugriff, Richtlinien, Updates und Apps.
+  Wenn Sie die PrÃ¼fung [Exam 70-698](https://www.microsoft.com/de-de/learning/exam-70-698.aspx) bestanden haben, bevor sie am 31. MÃ¤rz 2019 abgelaufen ist, brauchen Sie nur noch MD-101 zu absolvieren, um die Modern Desktop Zertifizierung zu erhalten. Kandidaten fÃ¼r diese PrÃ¼fung sind Administratoren, die GerÃ¤te und Client-Anwendungen in einer Unternehmensumgebung bereitstellen, konfigurieren, sichern, verwalten und Ã¼berwachen. Die Kandidaten verwalten IdentitÃ¤ten, Zugriff, Richtlinien, Updates und Apps.
   <br/>
 
-  Als Administratoren arbeiten die Kandidaten gewöhnlich mit dem Microsoft 365 Enterprise Administrator beim Entwurf und der Implementierung einer Gerätestrategie zusammen, die den geschäftlichen Anforderungen einer modernen Organisation gerecht wird.
+  Als Administratoren arbeiten die Kandidaten gewÃ¶hnlich mit dem Microsoft 365 Enterprise Administrator beim Entwurf und der Implementierung einer GerÃ¤testrategie zusammen, die den geschÃ¤ftlichen Anforderungen einer modernen Organisation gerecht wird.
   <br/>
 
-  Kandidaten müssen vertraut sein mit Microsoft 365 Workloads und müssen Erfahrung haben in der Bereitstellung, Konfigurierung und der Pflege von Windows 10 und Nicht-Windows Geräten und Technologien.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Betriebssysteme bereitstellen und aktualisieren, Richtlinien und Profile verwalten, Geräte verwalten und schützen, Anwendungen und Daten verwalten. Wenn Sie die Prüfung 70-698 bestanden haben, bevor sie am 31. März 2019 abgelaufen ist, brauchen Sie nur noch MD-101 zu absolvieren, um die Modern Desktop Zertifizierung zu erhalten.'
+  Kandidaten mÃ¼ssen vertraut sein mit Microsoft 365 Workloads und mÃ¼ssen Erfahrung haben in der Bereitstellung, Konfigurierung und der Pflege von Windows 10 und Nicht-Windows GerÃ¤ten und Technologien.
+subTitle: 'Diese PrÃ¼fung misst Ihre FÃ¤higkeit, folgende technische Aufgaben zu erfÃ¼llen: Betriebssysteme bereitstellen und aktualisieren, Richtlinien und Profile verwalten, GerÃ¤te verwalten und schÃ¼tzen, Anwendungen und Daten verwalten. Wenn Sie die PrÃ¼fung 70-698 bestanden haben, bevor sie am 31. MÃ¤rz 2019 abgelaufen ist, brauchen Sie nur noch MD-101 zu absolvieren, um die Modern Desktop Zertifizierung zu erhalten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJVD
-practiceTestUrl: https://us.mindhub.com/p/MU-MD-101?utm_source=microsoft&amp;utm_medium=certpage&amp;utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MD-101&examname=Exam%20MD-101:%20Managing%20Modern%20Desktops&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fde-de%2Flearn%2Fcertifications%2Fexams%2Fmd-101
+practiceTestUrl: https://us.mindhub.com/p/MU-MD-101?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MD-101&examname=PrÃ¼fung%20MD-101:%20Management%20von%20Modern%20Desktops&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fde-de%2Flearn%2Fcertifications%2Fexams%2Fmd-101
 locales:
 - en
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am Freitag, den 22. November 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser PrÃ¼fung wurde am Freitag, den 22. November 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument Skills measured herunter, um zu sehen, was sich geÃ¤ndert hat.
 - Betriebssysteme bereitstellen und aktualisieren (15-20%)
 - Verwaltung von Richtlinien und Profilen (35-40%)
-- Verwalten und Pflegen von Geräten (15-20%)
+- Verwalten und Pflegen von GerÃ¤ten (15-20%)
 - Verwalten von Apps und Daten (25-30%)
 roles:
 - administrator
@@ -50,20 +50,20 @@ resources:
   description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft-zertifizierter Modern Desktop Administrator Associate zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE45lE2
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich Ã¼ber die Zertifizierungen in einem Ã¼bersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfung wiederholen
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: PrÃ¼fung wiederholen
+  description: Sehen Sie sich zwei groÃŸartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhÃ¶hen.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: UnterstÃ¼tzung bei ZertifizierungsprÃ¼fungen
   description: Erhalten Sie Hilfe in Microsoft Support-Foren. Werktags (Montag-Freitag) wird Ihnen ein Forenmoderator antworten.
   href: ../help.md
 - title: Dashboard zur Zertifizierung
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  description: ÃœberprÃ¼fen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/de-de/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: UnterkÃ¼nfte anfordern
+  description: Erfahren Sie mehr Ã¼ber die Anforderung einer Unterkunft fÃ¼r Ihre PrÃ¼fung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+- title: PrÃ¼fungsrichtlinien und FAQs
+  description: Lesen Sie die PrÃ¼fungsrichtlinien und die hÃ¤ufig gestellten Fragen.
   href: ../certification-exam-policies.md
