--- a/learn-certs-pr/exams/ms-200.yml
+++ b/learn-certs-pr/exams/ms-200.yml
@@ -1,34 +1,34 @@
 ### YamlMime:Examination
 title: Planung und Konfiguration einer Messaging-Plattform
 metadata:
-  title: 'Prüfung MS-200: Planung und Konfiguration einer Messaging-Plattform'
-  description: 'Prüfung MS-200: Planung und Konfiguration einer Messaging-Plattform'
+  title: 'PrÃ¼fung MS-200: Planung und Konfiguration einer Messaging-Plattform'
+  description: 'PrÃ¼fung MS-200: Planung und Konfiguration einer Messaging-Plattform'
 uid: exam.ms-200
 displayName: MS-200
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am Mittwoch, den 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/></div>
+  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser PrÃ¼fung wurde am Mittwoch, den 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument Skills measured herunter, um zu sehen, was sich geÃ¤ndert hat.<br/><br/></div>
 
-  Kandidaten für diese Prüfung sind Messaging-Administratoren, die Empfänger, Berechtigungen, E-Mail-Schutz, E-Mail-Fluss und öffentliche Ordner sowohl in lokalen als auch in Cloud-Umgebungen bereitstellen, konfigurieren, verwalten, fehlerbeheben und überwachen.
+  Kandidaten fÃ¼r diese PrÃ¼fung sind Messaging-Administratoren, die EmpfÃ¤nger, Berechtigungen, E-Mail-Schutz, E-Mail-Fluss und Ã¶ffentliche Ordner sowohl in lokalen als auch in Cloud-Umgebungen bereitstellen, konfigurieren, verwalten, fehlerbeheben und Ã¼berwachen.
 
-  Messaging-Administratoren sind für die Verwaltung von Hygiene, Messaging-Infrastruktur, Hybridkonfiguration, Migration, Disaster Recovery, Hochverfügbarkeit und Client-Zugriff verantwortlich.
+  Messaging-Administratoren sind fÃ¼r die Verwaltung von Hygiene, Messaging-Infrastruktur, Hybridkonfiguration, Migration, Disaster Recovery, HochverfÃ¼gbarkeit und Client-Zugriff verantwortlich.
 
-  Messaging-Administratoren arbeiten gemeinsam mit dem Security Administrator und Microsoft 365 Enterprise Administrator an der Implementierung einer sicheren Hybrid-Topologie, die den Geschäftsanforderungen eines modernen Unternehmens entspricht.
+  Messaging-Administratoren arbeiten gemeinsam mit dem Security Administrator und Microsoft 365 Enterprise Administrator an der Implementierung einer sicheren Hybrid-Topologie, die den GeschÃ¤ftsanforderungen eines modernen Unternehmens entspricht.
 
-  Der Messaging-Administrator sollte über gute Kenntnisse in den Bereichen Authentifizierung, Lizenzierung und Integration mit Microsoft 365-Anwendungen verfügen.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Verwaltung einer modernen Messaging-Infrastruktur, Verwaltung der Mail-Flow-Topologie, und Verwaltung von Empfängern und Geräten.'
+  Der Messaging-Administrator sollte Ã¼ber gute Kenntnisse in den Bereichen Authentifizierung, Lizenzierung und Integration mit Microsoft 365-Anwendungen verfÃ¼gen.
+subTitle: 'Diese PrÃ¼fung misst Ihre FÃ¤higkeit, folgende technische Aufgaben zu erfÃ¼llen: Verwaltung einer modernen Messaging-Infrastruktur, Verwaltung der Mail-Flow-Topologie, und Verwaltung von EmpfÃ¤ngern und GerÃ¤ten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUk7
 practiceTestUrl: https://www.mindhub.com/p/MU-MS-200?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-200&examname=Exam%20MS-200:%20Planning%20and%20Configuring%20a%20Messaging%20Platform&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fde-de%2Flearn%2Fcertifications%2Fexams%2Fms-200
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-200&examname=PrÃ¼fung%20MS-200:%20Planung%20und%20Konfiguration%20einer%20Messaging-Plattform&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fde-de%2Flearn%2Fcertifications%2Fexams%2Fms-200
 locales:
 - en
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am Mittwoch, den 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser PrÃ¼fung wurde am Mittwoch, den 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument Skills measured herunter, um zu sehen, was sich geÃ¤ndert hat.
 - Verwaltung einer modernen Messaging-Infrastruktur (45-50%)
 - Verwalten der Email-Arbeitsablaufstruktur (35-40%)
-- Verwalten von Empfängern und Geräten (15-20%)
+- Verwalten von EmpfÃ¤ngern und GerÃ¤ten (15-20%)
 roles:
 - administrator
 products:
@@ -44,20 +44,20 @@ relatedCertifications:
     uid: certification.m365-messaging-administrator
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich Ã¼ber alle Zertifizierungen in einem Ã¼bersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfungwiederholen
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: PrÃ¼fungwiederholen
+  description: Sehen Sie sich zwei groÃŸartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhÃ¶hen.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: UnterstÃ¼tzung bei ZertifizierungsprÃ¼fungen
   description: Erhalten Sie Hilfe in Microsoft Support-Foren. Werktags (Montag-Freitag) wird Ihnen ein Forenmoderator antworten.
   href: ../help.md
 - title: Dashboard zur Zertifizierung
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  description: ÃœberprÃ¼fen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/de-de/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: UnterkÃ¼nfte anfordern
+  description: Erfahren Sie mehr Ã¼ber die Anforderung einer Unterkunft fÃ¼r Ihre PrÃ¼fung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+- title: PrÃ¼fungsrichtlinien und FAQs
+  description: Lesen Sie die PrÃ¼fungsrichtlinien und die hÃ¤ufig gestellten Fragen.
   href: ../certification-exam-policies.md
