--- a/learn-certs-pr/mos-access-2016.yml
+++ b/learn-certs-pr/mos-access-2016.yml
@@ -6,8 +6,8 @@ metadata:
 uid: certification.mos-access-2016
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
 summary: |-
-  Diese Zertifizierung zeigt, dass Sie die erforderlichen Fähigkeiten haben, um das Beste aus Office herauszuholen, indem Sie eine Microsoft Office Specialist (MOS) Zertifizierung in einem bestimmten Office-Programm erhalten.
-subTitle: Diese Zertifizierung zeigt, dass Sie die erforderlichen Fähigkeiten haben, um das Beste aus Office herauszuholen, indem Sie eine Microsoft Office Specialist (MOS) Zertifizierung in einem bestimmten Office-Programm erhalten.
+  Diese Zertifizierung zeigt, dass Sie die erforderlichen FÃ¤higkeiten haben, um das Beste aus Office herauszuholen, indem Sie eine Microsoft Office Specialist (MOS) Zertifizierung in einem bestimmten Office-Programm erhalten.
+subTitle: Diese Zertifizierung zeigt, dass Sie die erforderlichen FÃ¤higkeiten haben, um das Beste aus Office herauszuholen, indem Sie eine Microsoft Office Specialist (MOS) Zertifizierung in einem bestimmten Office-Programm erhalten.
 levels:
 - intermediate
 skills:
@@ -21,14 +21,14 @@ exams:
 - uid: exam.77-730
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich Ã¼ber alle Zertifizierungen in einem Ã¼bersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfung wiederholen
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: PrÃ¼fung wiederholen
+  description: Sehen Sie sich zwei groÃŸartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhÃ¶hen.
   href: deals.md
-- title: Unterstützung fur Zertifizierung
+- title: UnterstÃ¼tzung fur Zertifizierung
   description: Erhalten Sie Hilfe in Microsoft Support-Foren. Werktags (Montag-Freitag) wird Ihnen eine Forenmoderator antworten.
   href: help.md
 - title: Dashboard zur Zertifizierung
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  description: ÃœberprÃ¼fen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/de-de/learning/dashboard.aspx
