--- a/learn-certs-pr/exams/az-301.yml
+++ b/learn-certs-pr/exams/az-301.yml
@@ -1,19 +1,19 @@
 ### YamlMime:Examination
-title: Microsoft Azure Architect-Design
+title: Microsoft Azure Architect Design
 metadata:
-  title: 'Prüfung AZ-301: Microsoft Azure Architect-Design'
-  description: 'Prüfung AZ-301: Microsoft Azure Architect-Design'
-uid: exam.ai-301
+  title: 'PrÃ¼fung AZ-301: Microsoft Azure Architect-Design'
+  description: 'PrÃ¼fung AZ-301: Microsoft Azure Architect-Design'
+uid: exam.az-301
 displayName: AZ-301
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am Mittwoch, den 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/></div>
+  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser PrÃ¼fung wurde am Mittwoch, den 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument Skills measured herunter, um zu sehen, was sich geÃ¤ndert hat.<br/><br/></div>
 
-  Kandidaten für diese Prüfung sind Azure Solution Architects, die Interessenvertreter beraten und Geschäftsanforderungen in sichere, skalierbare und zuverlässige Lösungen umsetzen. Die Kandidaten sollten über umfangreiche Erfahrungen und Kenntnisse in verschiedenen Aspekten des IT-Betriebs verfügen, einschließlich Netzwerk, Virtualisierung, Identität, Sicherheit, Business Continuity, Disaster Recovery, Datenmanagement, Budgetierung und Governance. Diese Position erfordert die Verwaltung der Auswirkungen von Entscheidungen in den einzelnen Bereichen auf eine Gesamtlösung. Die Kandidaten müssen über gute Kenntnisse in den Bereichen Azure-Administration, Azure-Entwicklung und DevOps verfügen und über Kenntnisse auf Expertenebene in mindestens einem dieser Bereiche verfügen.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Ermitteln der Workload-Anforderungen; Design für Identität und Sicherheit; Design einer Datenbankplattformlösung; Design einer Strategie für Geschäftskontinuität; Design für Bereitstellung, Migration und Integration;  Design einer Infrastrukturstrategie.'
+  Kandidaten fÃ¼r diese PrÃ¼fung sind Azure Solution Architects, die Interessenvertreter beraten und GeschÃ¤ftsanforderungen in sichere, skalierbare und zuverlÃ¤ssige LÃ¶sungen umsetzen. Die Kandidaten sollten Ã¼ber umfangreiche Erfahrungen und Kenntnisse in verschiedenen Aspekten des IT-Betriebs verfÃ¼gen, einschlieÃŸlich Netzwerk, Virtualisierung, IdentitÃ¤t, Sicherheit, Business Continuity, Disaster Recovery, Datenmanagement, Budgetierung und Governance. Diese Position erfordert die Verwaltung der Auswirkungen von Entscheidungen in den einzelnen Bereichen auf eine GesamtlÃ¶sung. Die Kandidaten mÃ¼ssen Ã¼ber gute Kenntnisse in den Bereichen Azure-Administration, Azure-Entwicklung und DevOps verfÃ¼gen und Ã¼ber Kenntnisse auf Expertenebene in mindestens einem dieser Bereiche verfÃ¼gen.
+subTitle: 'Diese PrÃ¼fung misst Ihre FÃ¤higkeit, folgende technische Aufgaben zu erfÃ¼llen: Ermitteln der Workload-Anforderungen; Design fÃ¼r IdentitÃ¤t und Sicherheit; Design einer DatenbankplattformlÃ¶sung; Design einer Strategie fÃ¼r GeschÃ¤ftskontinuitÃ¤t; Design fÃ¼r Bereitstellung, Migration und Integration;  Design einer Infrastrukturstrategie.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHD
-practiceTestUrl: https://us.mindhub.com/p/MU-AZ-301?utm_source=microsoft&amp;utm_medium=certpage&amp;utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-301&examname=Exam%20AZ-301:%20Microsoft%20Azure%20Architect%20Design&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fde-de%2Flearn%2Fcertifications%2Fexams%2Faz-301
+practiceTestUrl: https://us.mindhub.com/p/MU-AZ-301?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-301&examname=PrÃ¼fung%20AZ-301:%20Microsoft%20Azure%20Architect-Design&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fde-de%2Flearn%2Fcertifications%2Fexams%2Faz-301
 locales:
 - en
 - ja
@@ -22,12 +22,12 @@ locales:
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wurde am Mittwoch, den 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser PrÃ¼fung wurde am Mittwoch, den 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument Skills measured herunter, um zu sehen, was sich geÃ¤ndert hat.
 - Ermittlung des Arbeitsaufwands (10-15%)
-- Entwurf für Identität und Sicherheit (20-25%)
-- Entwurf einer Datenbankplattformlösung (15-20%)
-- Entwicklung einer Strategie für Geschäftskontinuität (15-20%)
-- Design für Bereitstellung, Migration und Integration (10-15%)
+- Entwurf fÃ¼r IdentitÃ¤t und Sicherheit (20-25%)
+- Entwurf einer DatenbankplattformlÃ¶sung (15-20%)
+- Entwicklung einer Strategie fÃ¼r GeschÃ¤ftskontinuitÃ¤t (15-20%)
+- Design fÃ¼r Bereitstellung, Migration und Integration (10-15%)
 - Entwurf einer Infrastrukturstrategie (15-20%)
 roles:
 - solution-architect
@@ -79,20 +79,21 @@ resources:
   description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft zertifizierter Azure Solutions Architect Experte zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtVsd
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich Ã¼ber die Zertifizierungen in einem Ã¼bersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfung wiederholen
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: PrÃ¼fung wiederholen
+  description: Sehen Sie sich zwei groÃŸartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhÃ¶hen.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: UnterstÃ¼tzung bei ZertifizierungsprÃ¼fungen
   description: Erhalten Sie Hilfe in Microsoft Support-Foren. Werktags (Montag-Freitag) wird Ihnen ein Forenmoderator antworten.
   href: ../help.md
 - title: Dashboard zur Zertifizierung
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  description: ÃœberprÃ¼fen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/de-de/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: UnterkÃ¼nfte anfordern
+  description: Erfahren Sie mehr Ã¼ber die Anforderung einer Unterkunft fÃ¼r Ihre PrÃ¼fung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+- title: PrÃ¼fungsrichtlinien und FAQs
+  description: Lesen Sie die PrÃ¼fungsrichtlinien und die hÃ¤ufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
