--- a/learn-certs-pr/exams/ms-201.yml
+++ b/learn-certs-pr/exams/ms-201.yml
@@ -1,30 +1,30 @@
 ### YamlMime:Examination
 title: Implementieren einer Hybrid- und Sicherheits-Messaging-Plattform
 metadata:
-  title: 'Prüfung MS-201: Implementieren einer Hybrid- und Sicherheits-Messaging-Plattform'
-  description: 'Prüfung MS-201: Implementieren einer Hybrid- und Sicherheits-Messaging-Plattform'
+  title: 'PrÃ¼fung MS-201: Implementieren einer Hybrid- und Sicherheits-Messaging-Plattform'
+  description: 'PrÃ¼fung MS-201: Implementieren einer Hybrid- und Sicherheits-Messaging-Plattform'
 uid: exam.ms-201
 displayName: MS-201
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am Montag, 25. November 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/></div>
+  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser PrÃ¼fung wurde am Montag, 25. November 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument Skills measured herunter, um zu sehen, was sich geÃ¤ndert hat.<br/><br/></div>
 
-  Kandidaten für diese Prüfung sind Messaging-Administratoren, die Empfänger, Berechtigungen, E-Mail-Schutz, E-Mail-Fluss und öffentliche Ordner sowohl in lokalen als auch in Cloud-Umgebungen bereitstellen, konfigurieren, verwalten, fehlerbeheben und überwachen.
+  Kandidaten fÃ¼r diese PrÃ¼fung sind Messaging-Administratoren, die EmpfÃ¤nger, Berechtigungen, E-Mail-Schutz, E-Mail-Fluss und Ã¶ffentliche Ordner sowohl in lokalen als auch in Cloud-Umgebungen bereitstellen, konfigurieren, verwalten, fehlerbeheben und Ã¼berwachen.
 
-  Messaging-Administratoren sind für die Verwaltung von Hygiene, Messaging-Infrastruktur, Hybridkonfiguration, Migration, Disaster Recovery, Hochverfügbarkeit und Client-Zugriff verantwortlich.
+  Messaging-Administratoren sind fÃ¼r die Verwaltung von Hygiene, Messaging-Infrastruktur, Hybridkonfiguration, Migration, Disaster Recovery, HochverfÃ¼gbarkeit und Client-Zugriff verantwortlich.
 
-  Messaging-Administratoren arbeiten gemeinsam mit dem Security Administrator und Microsoft 365 Enterprise Administrator an der Implementierung einer sicheren Hybrid-Topologie, die den Geschäftsanforderungen eines modernen Unternehmens entspricht.
+  Messaging-Administratoren arbeiten gemeinsam mit dem Security Administrator und Microsoft 365 Enterprise Administrator an der Implementierung einer sicheren Hybrid-Topologie, die den GeschÃ¤ftsanforderungen eines modernen Unternehmens entspricht.
 
-  Der Messaging-Administrator sollte über gute Kenntnisse in den Bereichen Authentifizierung, Lizenzierung und Integration mit Microsoft 365-Anwendungen verfügen.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Planung und Implementierung einer hybriden Konfiguration und Migration, Sicherung der Messaging-Umgebung und Verwaltung der organisatorischen Einstellungen.'
+  Der Messaging-Administrator sollte Ã¼ber gute Kenntnisse in den Bereichen Authentifizierung, Lizenzierung und Integration mit Microsoft 365-Anwendungen verfÃ¼gen.
+subTitle: 'Diese PrÃ¼fung misst Ihre FÃ¤higkeit, folgende technische Aufgaben zu erfÃ¼llen: Planung und Implementierung einer hybriden Konfiguration und Migration, Sicherung der Messaging-Umgebung und Verwaltung der organisatorischen Einstellungen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUk9
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-201&examname=Exam%20MS-201:%20Implementing%20a%20Hybrid%20and%20Secure%20Messaging%20Platform&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fde-de%2Flearn%2Fcertifications%2Fexams%2Fms-201
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-201&examname=PrÃ¼fung%20MS-201:%20Implementieren%20einer%20Hybrid-%20und%20Sicherheits-Messaging-Plattform&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fde-de%2Flearn%2Fcertifications%2Fexams%2Fms-201
 locales:
 - en
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am Montag, den 25. November 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser PrÃ¼fung wurde am Montag, den 25. November 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument Skills measured herunter, um zu sehen, was sich geÃ¤ndert hat.
 - Planen und Implementieren einer Hybrid- Konfiguration und Migration (35-40%)
 - Sichern der Messaging-Umgebung (40-45%)
 - Organisatorische Einstellungen verwalten (15-20%)
@@ -42,20 +42,20 @@ relatedCertifications:
     uid: certification.m365-messaging-administrator
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich Ã¼ber alle Zertifizierungen in einem Ã¼bersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfung wiederholen
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: PrÃ¼fung wiederholen
+  description: Sehen Sie sich zwei groÃŸartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhÃ¶hen.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: UnterstÃ¼tzung bei ZertifizierungsprÃ¼fungen
   description: Erhalten Sie Hilfe in Microsoft Support-Foren. Werktags (Montag-Freitag) wird Ihnen ein Forenmoderator antworten.
   href: ../help.md
 - title: Dashboard zur Zertifizierung
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  description: ÃœberprÃ¼fen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/de-de/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: UnterkÃ¼nfte anfordern
+  description: Erfahren Sie mehr Ã¼ber die Anforderung einer Unterkunft fÃ¼r Ihre PrÃ¼fung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+- title: PrÃ¼fungsrichtlinien und FAQs
+  description: Lesen Sie die PrÃ¼fungsrichtlinien und die hÃ¤ufig gestellten Fragen.
   href: ../certification-exam-policies.md
