--- a/learn-certs-pr/mos-excel-expert-2019.yml
+++ b/learn-certs-pr/mos-excel-expert-2019.yml
@@ -1,29 +1,29 @@
 ### YamlMime:Certification
-title: 'Microsoft Office Specialist: Microsoft Word Expert (Word und Word 2019)'
+title: 'Microsoft Office Specialist: Microsoft Excel Expert (Excel und Excel 2019)'
 metadata:
-  title: 'Microsoft Office Specialist: Microsoft Word Expert (Word und Word 2019)'
+  title: 'Microsoft Office Specialist: Microsoft Excel Expert (Excel und Excel 2019)'
   description: 'Zeigen Sie, dass Sie über die fortgeschrittenen Fähigkeiten verfügen, die Sie benötigen, um das Beste aus Ihrem Office herauszuholen, und verdienen Sie sich einen Microsoft Office Specialist: Expertenzertifizierung in einem bestimmten Office-Programm.'
-uid: certification.mos-word-expert-2019
+uid: certification.mos-excel-expert-2019
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
-  Zeigen Sie, dass Sie über die fortgeschrittenen Fähigkeiten verfügen, die Sie benötigen, um das Beste aus Ihrem Office herauszuholen, und erwerben Sie eine Microsoft Office Specialist&#58; Expert Zertifizierung in einem bestimmten Office Programm.
-subTitle: 'Zeigen Sie, dass Sie über die fortgeschrittenen Fähigkeiten verfügen, die Sie benötigen, um das Beste aus Ihrem Office herauszuholen, und verdienen Sie sich einen Microsoft Office Specialist: Expertenzertifizierung in einem bestimmten Office-Programm.'
+  Zeigen Sie, dass Sie über die fortgeschrittenen Fähigkeiten verfügen, die Sie benötigen, um das Beste aus Ihrem Office herauszuholen, und verdienen Sie sich einen Microsoft Office Specialist: Expertenzertifizierung in einem bestimmten Office-Programm.
+subTitle: Diese Zertifizierung zeigt, dass Sie die erforderlichen Fähigkeiten haben, um das Beste aus Office herauszuholen, indem Sie eine Microsoft Office Specialist (MOS) Zertifizierung in einem bestimmten Office-Programm erhalten.
 levels:
 - advanced
 skills:
-- Dokumentoptionen und -einstellungen verwalten
-- Fortgeschrittenes Bearbeiten und Formatieren verwenden
-- Eigene Dokumentelemente erstellen
-- Erweiterte Word-Funktionen verwenden
+- Verwalten von Arbeitsmappen-Optionen und -Einstellungen
+- Daten verwalten und formatieren
+- Erstellen von erweiterten Formeln und Makros
+- Verwalten erweiterter Diagramme und Tabellen
 roles:
 - business-user
 type: mos
 products:
 - office
-- office-word
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3WHJ2
+- office-excel
+pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE44NP0
 exams:
-- uid: exam.mo-101
+- uid: exam.mo-201
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
