Localized pages set 1 -update

--- a/learn-certs-pr/mos-word-expert-2019.yml
+++ b/learn-certs-pr/mos-word-expert-2019.yml
@@ -2,17 +2,17 @@
 title: 'Microsoft Office Specialist: Microsoft Word Expert (Word und Word 2019)'
 metadata:
   title: 'Microsoft Office Specialist: Microsoft Word Expert (Word und Word 2019)'
-  description: 'Zeigen Sie, dass Sie über die fortgeschrittenen Fähigkeiten verfügen, die Sie benötigen, um das Beste aus Ihrem Office herauszuholen, und verdienen Sie sich einen Microsoft Office Specialist: Expertenzertifizierung in einem bestimmten Office-Programm.'
+  description: 'Zeigen Sie, dass Sie über die erweiterten Fähigkeiten verfügen, die Sie benötigen, um Office optimal zu nutzen und erwerben Sie eine Microsoft Office Specialist Expertenzertifizierung in einem bestimmten Office-Programm.'
 uid: certification.mos-word-expert-2019
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
-  Zeigen Sie, dass Sie über die fortgeschrittenen Fähigkeiten verfügen, die Sie benötigen, um das Beste aus Ihrem Office herauszuholen, und erwerben Sie eine Microsoft Office Specialist&#58; Expert Zertifizierung in einem bestimmten Office Programm.
-subTitle: 'Zeigen Sie, dass Sie über die fortgeschrittenen Fähigkeiten verfügen, die Sie benötigen, um das Beste aus Ihrem Office herauszuholen, und verdienen Sie sich einen Microsoft Office Specialist: Expertenzertifizierung in einem bestimmten Office-Programm.'
+  Zeigen Sie, dass Sie über die erweiterten Fähigkeiten verfügen, die Sie benötigen, um Office optimal zu nutzen und erwerben Sie eine Microsoft Office Specialist&#58; Expertenzertifizierung in einem bestimmten Office Programm.
+subTitle: 'Zeigen Sie, dass Sie über die erweiterten Fähigkeiten verfügen, die Sie benötigen, um Office optimal zu nutzen und erwerben Sie eine Microsoft Office Specialist Expertenzertifizierung in einem bestimmten Office-Programm.'
 levels:
 - advanced
 skills:
-- Dokumentoptionen und -einstellungen verwalten
-- Fortgeschrittenes Bearbeiten und Formatieren verwenden
+- Dokument-Optionen und -Einstellungen verwalten
+- Erweitertes Bearbeiten und Formatieren verwenden
 - Eigene Dokumentelemente erstellen
 - Erweiterte Word-Funktionen verwenden
 roles:
@@ -37,3 +37,4 @@ resources:
 - title: Dashboard zur Zertifizierung
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/de-de/learning/dashboard.aspx
+
