--- a/learn-certs-pr/d365-functional-consultant-sales.yml
+++ b/learn-certs-pr/d365-functional-consultant-sales.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft-zertifizierter: Dynamics 365 Sales Functional Consultant Associate'
 metadata:
   title: 'Microsoft-zertifizierter: Dynamics 365 Sales Functional Consultant Associate'
-  description: 'Microsoft Dynamics 365 for Sales Functional Consultants implementiert Lösungen zur Vorhersage und Design von Kundenverbindungen, Management von Deals durch Processing and Closing und Erhöhung der Leistung des Verkaufsteams durch Datenanalyse.'
+  description: "Microsoft Dynamics 365 for Sales Functional Consultants implementiert Lösungen zur Vorhersage und Design von Kundenverbindungen, Management von Deals durch Processing and Closing und Erhöhung der Leistung des Verkaufsteams durch Datenanalyse."
 uid: certification.d365-functional-consultant-sales
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
