--- a/learn-certs-pr/d365-functional-consultant-sales.yml
+++ b/learn-certs-pr/d365-functional-consultant-sales.yml
@@ -52,7 +52,7 @@ exams:
 - uid: exam.mb-210
 resources:
 - title: Zertifikat Lernpfad
-  description: "Entdecken Sie die Schulungsressourcen, um ein Microsoft zertifizierter: Dynamics 365 Sales Functional Consultant Associate' zu werden."
+  description: "Entdecken Sie die Schulungsressourcen, um ein Microsoft zertifizierter: Dynamics 365 Sales Functional Consultant Associate zu werden."
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35xKa
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
