--- a/learn-certs-pr/exams/70-345.yml
+++ b/learn-certs-pr/exams/70-345.yml
@@ -43,7 +43,7 @@ relatedCertifications:
 - related:
     uid: certification.mcse-productivity-certification
 resources:
-- title: Exam Replay
+- title: Prüfungswiederholung
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Dashboard zur Zertifizierung
