--- a/learn-certs-pr/exams/mb-600.yml
+++ b/learn-certs-pr/exams/mb-600.yml
@@ -12,7 +12,7 @@ summary: |-
 
   Lösungsarchitekten haben Erfahrung in den  fachlichen und technischen Disziplinen der Power Platform und modellgesteuerten Anwendungen in Dynamics 365. Lösungsarchitekten sollen in der Lage sein, Designentscheidungen in den Bereichen Entwicklung, Konfiguration, Integration, Infrastruktur, Sicherheit, Verfügbarkeit, Storage und Änderungsmanagement zu erleichtern. In dieser Rolle stellen Lösungsarchitekten die Balance zwischen den fachlichen und nicht-fachlichen geschäftlichen Anforderungen eines Projekts her.
   
-  <div style="color:red"><br/><strong>NOTE&#58; Diese Prüfung wird erst am 31. Dezember 2019 verfügbar sein</strong></div>
+  <div style="color:red"><br/><strong>NOTE&#58; Diese Prüfung wird erst am 27. Januar 2020 verfügbar sein</strong></div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Anforderungsanalyse, Lösungskonzeption sowie Entwicklung und Implementierung der Lösung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE440oW
