--- a/learn-certs-pr/exams/mb-700.yml
+++ b/learn-certs-pr/exams/mb-700.yml
@@ -12,7 +12,7 @@ summary: |-
 
   Der Lösungsarchitekt muss über breites Wissen und Erfahrung verfügen, das die Geschäftsanforderungen und Produktfunktionen abdeckt. Der Lösungsarchitekt muss über breites funktionales und technisches Fachwissen als Entwickler oder Fachberater in einer der folgenden Funktionen verfügen&#58; Finanzen, Fertigung oder Lieferkettenmanagement. Darüber hinaus verfügen Lösungsarchitekten über umfangreiche Fachkenntnisse in einer oder mehreren Kundenbranchen.
   
-  <div style="color:red"><br/><strong>NOTE&#58; Diese Prüfung wird erst am 31. Dezember 2019 verfügbar sein</strong></div>
+  <div style="color:red"><br/><strong>NOTE&#58; Diese Prüfung wird erst am 27. Januar 2020 verfügbar sein</strong></div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Identifizieren von Lösungsanforderungen, Entwerfen von Lösungskomponenten und Definieren von Lösungstest- und Managementstrategien.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Vdh
